fixing works item layout and gap in gallery

--- a/29-grid-portfolio/css/components/gallery.css
+++ b/29-grid-portfolio/css/components/gallery.css
@@ -7,7 +7,7 @@
   margin: 0;
   margin-block-start: 0.75rem;
   padding: 0;
-  margin-bottom: 16px;
+  margin-block-end: 30px;
 }
 
 /*
@@ -38,7 +38,6 @@
 }
 
 .gallery img {
-  margin-bottom: 16px;
 }
 
 .gallery figcaption {
